# Snake-Game

./: .gitignore  CMakeLists.txt  README.md  output_log.txt
shaders/: fragment.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
src/: main.cpp
src/Core/: InputManager.cpp  InputManager.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  TextRenderer.cpp  TextRenderer.h  Texture2D.h  Time.cpp  Time.h
src/GameObjects/: Snake.cpp  Snake.h
src/GameStates/: GameState.cpp  GameState.h
